# exchangespreadlog

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  config.generated.toml
docker/: entrypoint.sh
docs/: clickhouse-query-projection.sql  clickhouse-retention.sql  code-review-2026-07-06.md  code-review-2026-07-09-v2.md  code-review-2026-07-09.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile.frontend  README.md  package-lock.json  package.json
frontend/src/lib/: types.ts
frontend/src/lib/server/: catalog.ts  clickhouse.ts  (+2 more)
frontend/src/routes/: +page.svelte
scripts/: generate_config_from_lighter.py
src/: lib.rs  main.rs  state.rs  tui.rs
src/app/: mod.rs  runner.rs  subscriptions.rs
src/config/: mod.rs  model.rs
src/domain/: bbo.rs  market.rs  mod.rs  number.rs  quality.rs  valuation.rs
src/exchange/: mod.rs
src/exchange/ethereal/: adapter.rs  mod.rs  orderbook.rs  parser.rs
src/exchange/hyperliquid/: adapter.rs  mod.rs  parser.rs
src/exchange/lighter/: adapter.rs  mod.rs  parser.rs
src/exchange/ondo/: adapter.rs  mod.rs  parser.rs
src/exchange/perpl/: adapter.rs  mod.rs  orderbook.rs  parser.rs
src/exchange/risex/: adapter.rs  mod.rs  orderbook.rs  parser.rs
src/exchange/zero_one/: adapter.rs  mod.rs  orderbook.rs  parser.rs
src/ingest/: heartbeat.rs  mod.rs  supervisor.rs  time.rs  ws.rs
src/pipeline/: dedupe.rs  fanout.rs  mod.rs  normalizer.rs
src/storage/: clickhouse.rs  jsonl.rs  mod.rs  multi.rs  noop.rs
src/telemetry/: mod.rs
tests/: test_generate_config_from_lighter.py
(+3 files in other folders)
